# pastix

./: .dir-locals.el  .externals  .gitignore  .gitmodules  .project  Append.cmake  CMakeLists.txt  INSTALL.txt  README.txt  README_PETSC.txt  README_PYTHON.txt  patch.txt  windows_fix.h.in
scripts/: APIc2f.pl  APIc2latex.pl  APIc2param.pl  Archiver.pl  GenLatex.pl  GenNaturalDocs.pl  GetAllRes.pl  MakeReleaseHydra.pl  MakeTrace.pl  Pastix.pl  ScotchInstall.pl  concat_strat.pl  convert2ijv.pl  head.trace  (+3 more)
src/: CMakeLists.txt  Makefile  Revision  all_macros.mk  all_modules.mk  all_mp_rules.mk  all_rules.mk  depend.sh  myversion.sh  test.py
src/blend/src/: CMakeLists.txt  assembly.h  assemblyGener.c  assemblyGener.h  blend.c  blend.h  blend_distributeOnGPU.c  blend_distributeOnGPU.h  blend_symbol_cost.c  blendctrl.c  blendctrl.h  bulles.c  bulles.h  cand.h  cost.c  cost.h  costfunc.c  costfunc.h  csc.h  dague_config.h  distribPart.c  distribPart.h  elimin.c  elimin.h  eliminfunc.c  eliminfunc.h  extendVector.c  extendVector.h  extrastruct.c  extrastruct.h  fanboth2.c  fanboth2.h  fifo.h  flops.h  ftgt.h  list.h  list_item.h  module.mk  param_blend.c  param_blend.h  (+33 more)
src/common/src/: CMakeLists.txt  api.h  common.c  common_error.c  common_integer.c  common_integer.h  common_memory.c  common_pastix.h  common_sort.c  common_sort2.c  common_sort3.c  debug.h  errors.h  mingw_fix.c  module.mk  nompi.h  not_empty.h  out.h  pastix_fortran.h  pastix_fortran.inc  redefine_functions.h  testqsort.c  trace.c  trace.h
src/config/: AIX.in  COMPAQ.in  IA64.in  LINUX-GNU.in  LINUX-INTEL.in  MAC.in  PGI.in  SUN.in
src/example/src/: CMakeLists.txt  cppsimple.cpp  cppsimple_dist.cpp  do_not_redispatch_rhs.c  fmurge.F90  fsimple.F90  fstep-by-step.F90  isolate_zeros.c  makefile  mem_trace.c  mem_trace.h  mult-rhs-dist.c  mult-rhs.c  multi-comm-step.c  multi-comm.c  murge-product.c  murge.c  murge_2Dlap.c  murge_sequence.c  pastix_python.py  plot_memory_usage.c  reentrant.c  refinement.c  replaceCOEF.sh  schur.c  schur2.c  sed_c.in  sed_d.in  sed_s.in  sed_z.in  simple.c  simple_dist.c  simple_dist_redist.c  simple_param.c  step-by-step.c  step-by-step_dist.c  utils.F90  utils.h  utils.hpp
src/example/src/pypastix/: pastix.py  pastix_dist.py
src/fax/src/: CMakeLists.txt  fax.h  module.mk  symbol_compact.c  symbol_costi.c  symbol_costi.h  symbol_fax.c  symbol_fax.h  symbol_fax_graph.c  symbol_faxi.c  symbol_faxi.h  symbol_faxi_graph.c
src/kass/src/: CMakeLists.txt  KSupernodes.c  KSupernodes.h  KSupernodes2.c  SF_Direct.c  SF_Direct.h  SF_level.c  SF_level.h  amalgamate.c  amalgamate.h  compact_graph.c  compact_graph.h  find_supernodes.c  find_supernodes.h  ifax.c  ifax.h  isymb_compact.c  isymb_compact.h  kass.c  kass.h  module.mk  paskix.h  sort_row.c  sort_row.h  sparRow.c  sparRow.h
src/matrix/dmatrix/: mat_test  mat_test0  mat_test1  mat_test2  mat_test3  mat_test4  test  test0  test1  test2  test3
src/matrix/dmatrix/test5fichiers/: main  matrice_test0  matrice_test1  matrice_test2  matrice_test3  matrice_test4
src/matrix_drivers/src/: CMakeLists.txt  api_str_to_int.c.in  api_str_to_int.h  cccread.c  cccread.h  chbread.c  chbread.h  common_drivers.c  common_drivers.h  cscdread.c  cscdread.h  csparse.c  csparse.h  fdupread.c  fdupread.h  get_options.c  get_options.h  hbread.c  hbread.h  iohb.c  iohb.h  laplacian.c  laplacian.h  mmdread.c  mmdread.h  mmio.c  mmio.h  mmread.c  mmread.h  module.mk  mtx.c  mtx.h  olafread.c  olafread.h  peerread.c  peerread.h  petscread.c  petscread.h  read_matrix.c  read_matrix.h  (+7 more)
src/murge/: .gitignore  Makefile  Makefile.rules
src/murge/examples/: Makefile
src/murge/examples/src/: mmio.c  mmio.h  multi-matrix-and-rhs.c  murge-dist.c  murge-global.c  murge-mm.c  murge-save-load.c
src/murge/scripts/: gendoc.pl  genfort.pl  geninterface.pl
src/murge/scripts/NaturalDocs/: Menu.txt  NaturalDocsLogo.patch
src/order/src/: CMakeLists.txt  module.mk  ocv.c  ocv.h  order.c  order.h  order_base.c  order_check.c  order_io.c
src/parafax/src/: cscd.c  cscd.h  parafax.c  parafax.h
src/perf/src/: CMakeLists.txt  Makefile  module.mk  perf.h  perf.pwr5  reg_axpy.c  reg_copy.c  reg_geam.c  reg_gemm.c  reg_gemv.c  reg_pof.c  reg_ppf.c  reg_scal.c  reg_trsm.c  reg_trsv.c
src/perf/src/num_recipes/: complex.h  covsrt.c  gaussj.c  lfit.c  nr.h  nrutil.c  nrutil.h
src/sopalin/src/: CMakeLists.txt  MURGE_GetLocalElementList.c  bordi.c  bordi.h  cgemdm_fermi_define.h  cgemdm_fermi_define_bottom.h  cgemdm_fermi_define_corner.h  cgemdm_fermi_define_right.h  cgemm_fermi_define.h  cgemm_fermi_define_bottom.h  cgemm_fermi_define_corner.h  cgemm_fermi_define_right.h  cmurge.c  cmurge_pastix.h  coefinit.c  coefinit.h  commun.h  compute_context_nbr.c  compute_context_nbr.h  compute_diag.c  compute_gemdm.c  compute_trsm.c  contrib.c  csc_intern_build.c  csc_intern_build.h  csc_intern_compute.c  csc_intern_compute.h  csc_intern_io.c  csc_intern_io.h  csc_intern_old.c  csc_intern_old.h  csc_intern_solve.c  csc_intern_solve.h  csc_intern_updown.c  csc_intern_updown.h  csc_utils.c  csc_utils.h  cscd_test.c  cscd_utils.c  cscd_utils.h  (+157 more)
src/sparse-matrix/src/: CMakeLists.txt  module.mk  pastix_sparse_matrix.c  pastix_sparse_matrix.h  pastix_sparse_matrix_intern.h
src/symbol/src/: CMakeLists.txt  dof.c  dof.h  dof_io.c  module.mk  symbol.c  symbol.h  symbol2eps.c  symbol_base.c  symbol_check.c  symbol_cost.c  symbol_cost.h  symbol_draw.c  symbol_draw.h  symbol_io.c  symbol_keep.c  symbol_level.c  symbol_levf.c  symbol_nonzeros.c  symbol_tree.c  symboltops.c
src/utils/src/: CMakeLists.txt  genheader.c  insert-fortran-inc.sh  module.mk  pastix-conf.sh  print_options.c
src/wrapper/petsc/: config_PETSc_packages_PaStiX.py  src_mat_impl_aij_mpi_pastix_pastix.c
src/wrapper/src/: module.mk  pastix.i
src/wrapper/src/pypastix/: Makefile  genpxd.py  parseapi.py  setup.py
src/wrapper/src/pypastix/src/: PASTIX.pxd  _cmurge.pxd  _cscd_utils.pxd  _dmurge.pxd  _murge.pxd  _pastix.pxd  _smurge.pxd  _zmurge.pxd  mpi-compat.h  pastix_types.pxi  pypastix.c  pypastix.pyx  template.py
(+75 files in other folders)
